--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,5 +7,8 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
+bind-key -n C-H swap-window -t -1
+bind-key -n C-L swap-window -t +1
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
